--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ USER_EMAIL='standard_user'
 PASSWORD='secret_sauce'
 ENVIRONMENT='Staging'
 URL='https://www.saucedemo.com/'
+API_URL="https://www.abibliadigital.com.br/api/"
