--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Alexandre", "alexandrefrei", "labelledby", "msedge", "sadface", "testid", "textbox", "vides", "viewports"]
+  "cSpell.words": ["Alexandre", "alexandrefrei", "labelledby", "msedge", "responsebody", "sadface", "testid", "textbox", "vides", "viewports"]
 }
