--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,58 +1,6 @@
 name: Playwright Allure Reports
 
 on:
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to test against"'
-        required: false
-        default: 'qa'
-        type: choice
-        options:
-          - qa
-          - test-environment-1
-          - test-environment-2
-          - test-environment-3
-          - test-environment-4
-          - test-environment-5
-          - test-environment-6
-          - test-environment-7
-          - test-environment-8
-          - test-environment-9
-          - test-environment-10
-          - staging
-          - production-us
-          - production-de
-          - production-ca
-          - production-eu
-          - production-au
-      default_browser:
-        description: 'Default browser for tests (Ubuntu-compatible)'
-        required: false
-        default: 'chrome'
-        type: choice
-        options:
-          - chrome
-          - edge
-          - firefox
-      tag_filter:
-        description: 'Filter tests by tag (e.g., @builder, @systemd, @oxygen)'
-        required: false
-        default: 'all'
-        type: choice
-        options:
-          - all
-          - '@builder'
-          - '@systemd'
-          - '@oxygen'
-          - '@wordwizard'
-          - '@playa'
-          - '@sandbar'
-          - '@datatables'
-          - '@emailservice'
-          - '@openaim'
-          - '@wordprocessingservice'
-          - '@backgroundapps'
   schedule:
     - cron: '0 0 * * *'
 
@@ -79,15 +27,7 @@ jobs:
         run: npx playwright install --with-deps
       #  
       - name: Run Playwright tests
-        run: |
-          if [ "${{ inputs.tag_filter || 'all' }}" = "all" ]; then
-            npx playwright test
-          else
-            npx playwright test --grep "${{ inputs.tag_filter }}"
-          fi
-        env:
-          ENVIRONMENT: ${{ inputs.environment || 'qa' }}
-          DEFAULT_BROWSER: ${{ inputs.default_browser || 'chrome' }}
+        run: npx playwright test
       #    
       - name: Get Allure history
         uses: actions/checkout@v4
