--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.43.1",
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "allure-playwright": "^2.0.0",
+    "allure-commandline": "^2.14.0"
   },
   "scripts": {
+    "test": "playwright test",
     "test:run": "npx playwright test tests/ui/'",
     "test:run:single": "npx playwright test tests/ui/specs/login/login.spec.ts --project=chromium --workers=1 --headed",
     "test:run:all": "npx playwright test tests",
@@ -19,7 +22,10 @@
     "test:run:UI-Interactive": "npx playwright test --ui tests/ui/specs/login/login.spec.ts --project=chromium",
     "test:run:Debug": "npx playwright test tests/ui/specs/buyProducts.spec.ts --project=chromium --workers=1 --headed --debug",
     "test:run:Buy": "npx playwright test tests/ui/specs/buyProducts.spec.ts --project=chromium --workers=1 --headed",
-    "test:run:UI-Interactive-All": "npx playwright test --ui tests/ui/specs/ --project=chromium"
+    "test:run:UI-Interactive-All": "npx playwright test --ui tests/ui/specs/ --project=chromium",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "clean": "rm -rf allure-report allure-results allure-history"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
