--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,6 +38,14 @@ jobs:
           ref: gh-pages
           path: gh-pages
       #
+      - name: Publish XML report
+        uses: dorny/test-reporter@v1
+        if: success() || failure() # run this step even if tests failed
+        with:
+          name: Playwright Tests
+          path: test-results/junit-results.xml
+          reporter: java-junit
+          fail-on-error: true
       - name: 📊 Generate Allure Report with history
         uses: simple-elf/allure-report-action@master
         if: always()
