--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -71,10 +71,18 @@ jobs:
           echo "TEST_PASSED=$passed" >> $GITHUB_ENV
           echo "TEST_FAILED=$failed" >> $GITHUB_ENV
           
-      - name: Adding Markdown
+      - name: Test Results
         if: always()
         run: |
-          echo "### Cypress Test Report! :rocket:"
+          echo "### Test Report ###"
+          echo "SEM ENV Test Total is: $TEST_TOTAL"
+          echo "SEM ENV Test Passed is: $TEST_PASSED"
+          echo "SEM ENV Test Faield is: $TEST_FAILED"
+
+          echo "### Test Report ###"
+          echo "Test Total is: {{$env.TEST_TOTAL}}"
+          echo "Test Passed is: {{$env.TST_PASSED}}"
+          echo "Test Faield is: {{$env.TEST_FAILED}}"
          
 
       
