--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,7 +11,7 @@ permissions:
   checks: write
 
 jobs:
-  test:
+  RunTest:
     timeout-minutes: 90
     name: 🧪 Running E2E tests
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
   Report:
       name: 📊 Generate and Publish Allure Report
       runs-on: ubuntu-latest
-      needs: test
+      needs: RunTest #RunTest Jobs dependency
       if: always()
       steps:
         - name: ⬇️ Download Allure Results
@@ -52,6 +52,7 @@ jobs:
           with:
             name: allure-results
             path: allure-results
+        #    
         - name: 📜 Get Allure history (gh-pages)
           uses: actions/checkout@v4
           if: always()
@@ -72,6 +73,7 @@ jobs:
             allure_results: allure-results
             allure_history: allure-history
             allure_report: allure-report
+            gh-pages: gh-pages
             keep_reports: 7
           #
         - name: 🚀 Publish test report
@@ -81,37 +83,3 @@ jobs:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_branch: gh-pages
             publish_dir: allure-history
-          #  
-  
-  
-        - name: Parse JUnit summary
-          if: always()
-          id: data
-          run: |
-            sudo apt-get update && sudo apt-get install -y libxml2-utils
-            total=$(xmllint --xpath "string(/testsuites/@tests)" test-results/junit-results.xml)
-            failed=$(xmllint --xpath "string(/testsuites/@failures)" test-results/junit-results.xml)
-            skipped=$(xmllint --xpath "string(/testsuites/@skipped)" test-results/junit-results.xml)
-            errors=$(xmllint --xpath "string(/testsuites/@errors)" test-results/junit-results.xml)
-            passed=$((total - failed - skipped - errors))
-            echo "TEST_TOTAL=$total" >> $GITHUB_ENV
-            echo "TEST_PASSED=$passed" >> $GITHUB_ENV
-            echo "TEST_FAILED=$failed" >> $GITHUB_ENV
-            
-        - name: Test Results
-          if: always()
-          run: |
-            echo "### Test Report ###"
-            echo "SEM ENV Test Total is: $TEST_TOTAL"
-            echo "SEM ENV Test Passed is: $TEST_PASSED"
-            echo "SEM ENV Test Faield is: $TEST_FAILED"
-            echo "SEM ENV DATE: ${{ steps.currentDate.outputs.date }}"
-  
-            echo "### Test Report ###"
-            echo "Test Total is: ${{ env.TEST_TOTAL }}"
-            echo "Test Passed is: ${{ env.TST_PASSED }}"
-            echo "Test Faield is: ${{ env.TEST_FAILED }}"
-            echo "DATE: ${{ steps.currentDate.date }}"
-         
-
-      
