--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,7 +11,7 @@ permissions:
   checks: write
 
 jobs:
-  RunTest:
+  Run_Test:
     timeout-minutes: 90
     name: 🧪 Running E2E tests
     runs-on: ubuntu-latest
@@ -41,10 +41,10 @@ jobs:
         with:
           name: allure-results
           path: allure-results/
-  Report:
+  Generate_Report:
       name: 📊 Generate and Publish Allure Report
       runs-on: ubuntu-latest
-      needs: RunTest #RunTest Jobs dependency
+      needs: Run_Test
       if: always()
       steps:
         - name: ⬇️ Download Allure Results
