--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,48 +41,61 @@ jobs:
         with:
           name: allure-results
           path: allure-results/
-  Generate_Report:
-      name: 📊 Generate and Publish Allure Report
-      runs-on: ubuntu-latest
-      needs: Run_Test
-      if: always()
-      steps:
-        - name: ⬇️ Download Allure Results
-          uses: actions/download-artifact@v4
-          with:
-            name: allure-results
-            path: allure-results
-        #    
-        - name: 📜 Get Allure history (gh-pages)
-          uses: actions/checkout@v4
-          if: always()
-          continue-on-error: true
-          with:
-            ref: gh-pages
-            path: gh-pages
-            fetch-depth: 1
+  Generate_Allure_Report:
+    name: 📊 Generate and Publish Allure Report
+    runs-on: ubuntu-latest
+    needs: Run_Test
+    if: always()
+    steps:
+      - name: ⬇️ Download Allure Results
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results
+      #
+      - name: 📜 Get Allure History (gh-pages)
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+          fetch-depth: 1
+      #
+      - name: 🧹 Clean .git from gh-pages checkout
+        if: always()
+        run: rm -rf gh-pages/.git || true
+      #  
+      - name: 📁 Restore Allure History # gh-pages ──► allure-history ──► allure-report ──► gh-pages
+        if: always()
+        run: |
+          mkdir -p allure-history
+          cp -R gh-pages/. allure-history/ || true
         #
-        - name: 🧹 Clean .git from gh-pages checkout
-          run: |
-            rm -rf gh-pages/.git || true
-            echo "gh-pages content after we delete .git:"
-            ls -la gh-pages
-        #    
-        - name: 📊 Generate Allure Report with history
-          uses: simple-elf/allure-report-action@master
-          if: always()
-          id: allure-report
-          with:
-            allure_results: allure-results
-            allure_history: allure-history
-            allure_report: allure-report
-            gh-pages: gh-pages
-            keep_reports: 7
-          #
-        - name: 🚀 Publish test report
-          if: always()
-          uses: peaceiris/actions-gh-pages@v4
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_branch: gh-pages
-            publish_dir: allure-history
+      - name: 📊 Generate Allure Report with History
+        uses: simple-elf/allure-report-action@master
+        id: allure-report
+        if: always()
+        with:
+          allure_results: allure-results
+          allure_history: allure-history
+          allure_report: allure-report
+          keep_reports: 15
+      #
+      - name: 🚀 Publish Test Report
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-report
+          force_orphan: true
+      #
+      - name: 📤 Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+      #
