--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -80,7 +80,7 @@ jobs:
       - name: 🔍 Inspect Allure Report folder
         run: |
           echo "📁 Contents of allure-report:"
-          ls -la allure-report
+          ls -la ./allure-report
           echo "📦 Size:"
           du -sh allure-report    
 
