--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -47,7 +47,7 @@ jobs:
       - name: 🔍 Inspect Allure Report folder
         run: |
           echo "📁 Contents of allure-report:"
-          ls -la ./allure-report
+          ls -la allure-report
           echo "📦 Size:"
           du -sh allure-report    
       #
@@ -57,14 +57,6 @@ jobs:
           ls -la ./allure-results
           echo "📦 Size:"
           du -sh allure-results  
-    #
-      - name: 📤 Upload Playwright Report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
           
   Generate_Allure_Report:
     name: 📊 Generate and Publish Allure Report
@@ -84,6 +76,7 @@ jobs:
         with:
           allure_results: allure-results
           allure_history: allure-history
+          allure_report: allure-report
           keep_reports: 15
       #
       - name: Upload artifact for Pages
