--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -79,7 +79,7 @@ jobs:
           allure_results: allure-results
           allure_history: allure-history
           keep_reports: 15
-          gh_pages: .
+          subfolder: allure-history
 
       # Precisamos subir a pasta allure-history como artefato para a PRÓXIMA execução
       - name: 💾 Save History for Next Run
@@ -102,7 +102,12 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
   
-     #     
+     # 
+      - name: 🔍 Inspect Root Folder
+        run: |
+          echo "📁 Contents of root"
+          ls -la   
+      #
       - name: 🔍 Inspect Allure Report folder
         run: |
           echo "📁 Contents of allure-report:"
@@ -116,28 +121,21 @@ jobs:
           ls -la ./allure-results
           echo "📦 Size:"
           du -sh allure-results 
-#
-      - name: 🔍 Inspect Allure Last History folder
-        run: |
-          echo "📁 Contents of allure-resuts:"
-          ls -la ./allure-history/last-history
-          echo "📦 Size:"
-          du -sh allure-results 
-      #   
+      #
       - name: 🔍 Inspect Allure History folder
         run: |
           echo "📁 Contents of allure-history:"
           ls -la ./allure-history
           echo "📦 Size:"
           du -sh allure-history
+      #    
+      - name: 🔍 Inspect Allure Last History folder
+        run: |
+          echo "📁 Contents of allure Last History:"
+          ls -la ./allure-history/last-history
+          echo "📦 Size:"
+          du -sh allure-results 
+      #   
+
     #     
-      - name: 🔍 Inspect Root Folder
-        run: |
-          echo "📁 Contents of root"
-          ls -la   
-      #
-      - name: 🔍 Inspect gh-pages Folder
-        run: |
-          echo "📁 Contents of root"
-          ls -la ./gh-pages   
-      #
+     
