--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -128,19 +128,19 @@ jobs:
           echo "📦 Size:"
           du -sh allure-results 
       #
-      - name: 🔍 Inspect Allure History folder
-        run: |
-          echo "📁 Contents of allure-history:"
-          ls -la ./allure-history
-          echo "📦 Size:"
-          du -sh allure-history
+      #- name: 🔍 Inspect Allure History folder
+      #  run: |
+      #    echo "📁 Contents of allure-history:"
+      #    ls -la ./allure-history
+      #    echo "📦 Size:"
+      #    du -sh allure-history
       #    
-      - name: 🔍 Inspect Allure Last History folder
-        run: |
-          echo "📁 Contents of allure Last History:"
-          ls -la ./allure-history/last-history
-          echo "📦 Size:"
-          du -sh allure-results 
+      #- name: 🔍 Inspect Allure Last History folder
+      #  run: |
+      #    echo "📁 Contents of allure Last History:"
+      #    ls -la ./allure-history/last-history
+      #    echo "📦 Size:"
+      #    du -sh allure-results 
       #
       - name: 🔍 Inspect Allure Last History folder
         run: |
