--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -60,12 +60,18 @@ jobs:
         with:
           name: allure-results
           path: allure-results
-
+          
+      - name: 🔍 Inspect Root Folder
+        run: |
+          echo "📁 Contents of root"
+          ls -la   
+          
       - name: 📜 Download Previous Allure History
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          workflow: ${{ github.event.workflow.id || 'playwright.yml' }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: 'playwright.yml'
           name: history-artifact
           path: previous-history
           check_artifacts: true
@@ -80,7 +86,7 @@ jobs:
           fi
 
       - name: 📊 Generate Allure Report
-        uses: simple-elf/allure-report-action@master
+        uses: simple-elf/allure-report-action@1.7
         id: allure-report
         with:
           allure_results: allure-results
