--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -87,9 +87,9 @@ jobs:
 
       - name: 📊 Generate Allure Report
         uses: simple-elf/allure-report-action@master
-        id: allure-report
         with:
           allure_results: allure-results
+          allure_report: allure-report
           allure_history: data-for-allure
           keep_reports: 15
 
