--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -70,8 +70,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: Nightly Playwright Tests
+          workflow: playwright.yml
           name: history-artifact
           path: previous-history
           check_artifacts: true
