--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -71,7 +71,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          workflow: .github/workflows/playwright.yml
+          workflow: playwright.yml
           name: history-artifact
           path: previous-history
           search_artifacts: true
