--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -60,32 +60,52 @@ jobs:
         with:
           name: allure-results
           path: allure-results
-          
+      #    
       - name: 🔍 Inspect Root Folder
         run: |
           echo "📁 Contents of root"
           ls -la   
+     #     
+      - name: 🔎 Get workflow ID
+        id: get_workflow_id
+        run: |
+            WORKFLOW_NAME="Nightly Playwright Tests"
+        
+            WORKFLOW_ID=$(curl -s \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json" \
+              https://api.github.com/repos/${{ github.repository }}/actions/workflows \
+              | jq -r ".workflows[] | select(.name == \"${WORKFLOW_NAME}\") | .id")
+        
+            if [ -z "$WORKFLOW_ID" ] || [ "$WORKFLOW_ID" = "null" ]; then
+              echo "❌ Workflow ID not found"
+              exit 1
+            fi
+        
+            echo "workflow_id=$WORKFLOW_ID" >> $GITHUB_OUTPUT
+            echo "✅ Workflow ID: $WORKFLOW_ID"
+      #
           
       - name: 📜 Download Previous Allure History
         id: download_history
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          workflow: playwright.yml
+          workflow: Nightly Playwright Tests
+          workflow_search: true
           name: history-artifact
           path: previous-history
           search_artifacts: true
           if_no_artifact_found: warn
       #    
-      - name: 🔍 Print History Download Info
+      - name: 🔍 Debug workflow & run
         if: always()
         run: |
-          echo "📦 Artifact found: ${{ steps.download_history.outputs.found_artifact }}"
-          echo "🔁 Run ID: ${{ steps.download_history.outputs.run_id }}"
-          echo "🧪 Run Number: ${{ steps.download_history.outputs.run_number }}"
+          echo "Workflow ID used: ${{ steps.get_workflow_id.outputs.workflow_id }}"
+          echo "Artifact found: ${{ steps.download_history.outputs.found_artifact }}"
+          echo "Source run ID: ${{ steps.download_history.outputs.run_id }}"
+          echo "Source run number: ${{ steps.download_history.outputs.run_number }}"
       #
-
-      
       - name: 📁 Clean History
         run: |
           mkdir -p data-for-allure
