--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -91,7 +91,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v6
         continue-on-error: true
         with:
-          workflow: Nightly Playwright Tests
+          workflow: $WORKFLOW_ID
           workflow_search: true
           name: history-artifact
           path: previous-history
@@ -101,7 +101,7 @@ jobs:
       - name: 🔍 Debug workflow & run
         if: always()
         run: |
-          echo "Workflow ID used: ${{ steps.get_workflow_id.outputs.workflow_id }}"
+          echo "Workflow ID used: $WORKFLOW_ID"
           echo "Artifact found: ${{ steps.download_history.outputs.found_artifact }}"
           echo "Source run ID: ${{ steps.download_history.outputs.run_id }}"
           echo "Source run number: ${{ steps.download_history.outputs.run_number }}"
