--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -92,6 +92,7 @@ jobs:
         continue-on-error: true
         with:
           workflow: ${{ steps.get_workflow_id.outputs.workflow_id }}
+          workflow_conclusion: completed
           name: history-artifact
           path: previous-history
           search_artifacts: true
