--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -94,23 +94,22 @@ jobs:
           workflow: ${{ steps.get_workflow_id.outputs.workflow_id }}
           workflow_conclusion: completed
           name: history-artifact
-          path: previous-history
+          path: allure-history
           search_artifacts: true
           if_no_artifact_found: warn
       #    
-      - name: 🔍 Debug workflow & run
-        if: always()
+      #- name: 📁 Copy folder data-for-allure
+      #  run: |
+      #    mkdir -p data-for-allure
+      #    if [ -d "previous-history" ]; then
+      #      cp -r previous-history/. data-for-allure/
+      #    fi
+    #
+      - name: 📁 Copy Allure history folder
         run: |
-          echo "Workflow ID used: ${{ steps.get_workflow_id.outputs.workflow_id }}"
-          echo "Artifact found: ${{ steps.download_history.outputs.found_artifact }}"
-          echo "Source run ID: ${{ steps.download_history.outputs.run_id }}"
-          echo "Source run number: ${{ steps.download_history.outputs.run_number }}"
-      #
-      - name: 📁 Clean History
-        run: |
-          mkdir -p data-for-allure
-          if [ -d "previous-history" ]; then
-            cp -r previous-history/. data-for-allure/
+          mkdir -p gh-pages
+          if [ -d "gh-pages/last-history" ]; then
+            cp -r allure-history/last-history/. gh-pages/last-history/
           fi
     #
       - name: 🔍 Inspect Root Folder
@@ -118,17 +117,18 @@ jobs:
           echo "📁 Contents of root"
           ls -la   
     #
-      - name: 🔍 Inspect data-for-allure folder
+      - name: 🔍 Inspect allure-history folder
         run: |
-          echo "📁 Contents of allure Last History:"
-          ls -la ./data-for-allure
+          echo "📁 Contents of allure-history folder:"
+          ls -la ./allure-history
     #      
       - name: 📊 Generate Allure Report
         uses: simple-elf/allure-report-action@master
         with:
           allure_results: allure-results
           allure_report: allure-report
-          allure_history: data-for-allure
+          allure_history: allure-history
+          #allure_history: data-for-allure
           keep_reports: 15
 
       # Precisamos subir a pasta allure-history como artefato para a PRÓXIMA execução
@@ -137,7 +137,8 @@ jobs:
         if: always()
         with:
           name: history-artifact
-          path: data-for-allure
+          path: allure-history
+          #path: data-for-allure
           retention-days: 30
 
       - name: 🏗️ Setup Pages
